--- a/AndBible/res/values/untranslated_strings.xml
+++ b/AndBible/res/values/untranslated_strings.xml
@@ -14,6 +14,7 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
 	<string name="lang_czech">cs: Čeština</string>
 	<string name="lang_welsh">cy: Cymraeg</string>
 	<string name="lang_german">de: Deutsch</string>
+	<string name="lang_greek">el: Ελληνικά</string>
 	<string name="lang_english">en: English</string>
 	<string name="lang_spanish">es: Español</string>
 	<string name="lang_estonian">et: Eesti</string>
