--- a/AndBible/res/xml/settings.xml
+++ b/AndBible/res/xml/settings.xml
@@ -76,7 +76,11 @@
 				android:title="@string/prefs_navigate_to_verse_title"
 				android:summary="@string/prefs_navigate_to_verse_summary"
 				android:defaultValue="false"/>
-	<ListPreference android:key="screen_timeout_pref" 
+    <CheckBoxPreference android:key="verse_menu_button_pref"
+                        android:title="@string/prefs_verse_menu_button_title"
+                        android:summary="@string/prefs_verse_menu_button_summary"
+                        android:defaultValue="false"/>
+	<ListPreference android:key="screen_timeout_pref"
 				android:title="@string/prefs_screen_timeout_title"
 				android:summary="@string/prefs_screen_timeout_summary"
 				android:defaultValue=""/>
