--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -62,6 +62,7 @@
 		<item>@string/lang_indonesian</item>
 		<item>@string/lang_italian</item>
 		<item>@string/lang_japanese</item>
+		<item>@string/lang_kazakh</item>
 		<item>@string/lang_korean</item>
 		<item>@string/lang_lithuanian</item>
 		<item>@string/lang_latvian</item>
@@ -103,6 +104,7 @@
 		<item>in</item>
 		<item>it</item>
 		<item>ja</item>
+		<item>kk</item>
 		<item>ko</item>
 		<item>lt</item>
 		<item>lv</item>
