--- a/AndBible/res/values-w380dp/dimens.xml
+++ b/AndBible/res/values-w380dp/dimens.xml
@@ -19,21 +19,6 @@
 -->
 
 <resources>
-	<!-- dimen name="title_bar_title_width">130dip</dimen -->
-	<dimen name="title_bar_height">28dip</dimen>
-	
 	<!--  number and size of buttons varies depending on screen size and orientation -->
-	<bool name="split_passage_selector_buttons">false</bool>
-	<integer name="number_of_quick_buttons">3</integer>
-	<dimen name="size_of_quick_buttons">60dip</dimen>
-	<dimen name="size_of_small_quick_buttons">45dip</dimen>
-		
-	<integer name="grid_cell_text_size_sp">15</integer>
-	
-	<integer name="poetry_indent_chars">2</integer>
-	
-	<dimen name="split_screen_separator_width">4dip</dimen>
-	<dimen name="split_screen_separator_touch_expansion_width">10dip</dimen>
-	<dimen name="minimise_restore_button_size">35dip</dimen>
-		
+	<bool name="split_passage_selector_buttons">true</bool>
 </resources>
