--- a/AndBible/res/xml/settings.xml
+++ b/AndBible/res/xml/settings.xml
@@ -76,10 +76,10 @@
 				android:title="@string/prefs_navigate_to_verse_title"
 				android:summary="@string/prefs_navigate_to_verse_summary"
 				android:defaultValue="false"/>
-    <CheckBoxPreference android:key="verse_menu_button_pref"
+    <!-- CheckBoxPreference android:key="verse_menu_button_pref"
                         android:title="@string/prefs_verse_menu_button_title"
                         android:summary="@string/prefs_verse_menu_button_summary"
-                        android:defaultValue="false"/>
+                        android:defaultValue="false"/ -->
 	<ListPreference android:key="screen_timeout_pref"
 				android:title="@string/prefs_screen_timeout_title"
 				android:summary="@string/prefs_screen_timeout_summary"
