--- a/AndBible/res/values/untranslated_strings.xml
+++ b/AndBible/res/values/untranslated_strings.xml
@@ -30,6 +30,7 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
 	<string name="lang_japanese">ja: 日本語</string>
 	<string name="lang_kazakh">kk: Қазақша</string>
 	<string name="lang_korean">ko: 한국어</string>
+	<string name="lang_kyrgyz">ky: Кыргызча</string>
 	<string name="lang_lithuanian">lt: Lietuvių</string>
 	<string name="lang_latvian">lv: Latviešu</string>
 	<string name="lang_malagasy">mg: Malagasy</string>
