Use standard Speaker icon instead of awful smiley face

--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -60,6 +60,6 @@
 	
 	<item android:id="@+id/speakButton"
 		  android:title="@string/speak"
-		  android:icon="@drawable/ic_menu_happy"/>
+		  android:icon="@drawable/ic_action_volume_on"/>
 
 </menu>
