--- a/AndBible/res/menu/bookmark_labels_context_menu.xml
+++ b/AndBible/res/menu/bookmark_labels_context_menu.xml
@@ -9,5 +9,7 @@
 
 	<item android:id="@+id/delete" 
 		  android:title="@string/delete"/>
-
+	<item android:id="@+id/rename" 
+		  android:title="@string/rename"/>
+	
 </menu>
