--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -5,7 +5,8 @@
  @see gnu.lgpl.License for license details.<br>
       The copyright to this program is held by it's author.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:appcompat="http://schemas.android.com/apk/res-auto" >
 	<item android:id="@+id/selectPassageButton" 
 		  android:title="@string/selectPassage"
 		  android:icon="@android:drawable/ic_menu_today"/>
