--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -11,7 +11,7 @@
    	<item android:id="@+id/selectPassageButton" 
 		  android:title="@string/selectPassage"
 		  android:icon="@android:drawable/ic_menu_today"
-		  appcompat:showAsAction="ifRoom"/>
+		  appcompat:showAsAction="always"/>
 
 	<item android:id="@+id/searchButton"
 		  android:title="@string/search"
