--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -10,9 +10,20 @@
 
     <item android:id="@+id/selectPassageButton" 
 		  android:title="@string/selectPassage"
-		  android:icon="@android:drawable/ic_menu_today"
-		  appcompat:showAsAction="always"/>
+		  android:icon="@android:drawable/ic_menu_today"/>
 
+    <item android:id="@+id/chooseBookButton" 
+		  android:title="@string/chooseBook"
+		  android:icon="@android:drawable/ic_menu_save"/>
+
+	<item android:id="@+id/bookmarksButton"
+		  android:title="@string/bookmarks" 
+		  android:icon="@drawable/ic_menu_bookmarks"/>
+
+	<item android:id="@+id/mynotesButton"
+		  android:title="@string/mynotes" 
+		  android:icon="@drawable/ic_menu_usernotes"/>
+    
 	<item android:id="@+id/searchButton"
 		  android:title="@string/search"
 		  android:icon="@android:drawable/ic_menu_search"/>
@@ -25,4 +36,37 @@
 		  android:title="@string/verse"
 		  android:icon="@android:drawable/ic_menu_day"/>
    	
+	<item android:id="@+id/dailyReadingPlanButton"
+		  android:title="@string/rdg_plan_title"
+		  android:icon="@android:drawable/ic_menu_month"/>
+
+	<item 	android:id="@+id/historyButton" 
+			android:title="@string/history"
+			android:icon="@android:drawable/ic_menu_recent_history"/>
+
+		<item android:id="@+id/downloadButton"
+		  android:title="@string/download"
+		  android:icon="@drawable/ic_menu_goto"/>
+
+	<item android:id="@+id/settingsButton"
+		  android:title="@string/settings"
+		  android:icon="@android:drawable/ic_menu_preferences"/>
+	
+	<item android:id="@+id/backupMainMenu"
+		  android:title="@string/backup"
+		  android:icon="@android:drawable/ic_menu_save">
+		<menu>
+			<item android:id="@+id/backup"
+				  android:title="@string/backup"
+				  android:icon="@android:drawable/ic_menu_save"/>
+			<item android:id="@+id/restore"
+				  android:title="@string/restore"
+				  android:icon="@android:drawable/ic_menu_set_as"/>
+		</menu>
+	</item>
+	
+	<item android:id="@+id/helpButton"
+		  android:title="@string/help"
+		  android:icon="@android:drawable/ic_menu_help"/>
+    
 </menu>
