--- a/AndBible/res/values/styles.xml
+++ b/AndBible/res/values/styles.xml
@@ -5,13 +5,23 @@
  @see gnu.lgpl.License for license details.<br>
       The copyright to this program is held by it's author.
 -->
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 
 	<style name="AndBibleTheme" parent="@android:style/Theme.Light">
 		<item name="android:windowTitleSize">30dp</item>
 	</style>
 	-->
-	
+
+    <style name="ActionBarTitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minWidth">@dimen/size_of_quick_buttons</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="TitleBarTitleButton" parent="TitleBarButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:minWidth">@dimen/size_of_quick_buttons</item>
