--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -8,15 +8,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:appcompat="http://schemas.android.com/apk/res-auto" >
 
+    <!-- TODO: delete -->
     <item android:id="@+id/selectPassageButton" 
 		  android:title="@string/selectPassage"
-		  android:icon="@android:drawable/ic_menu_today"/>
+		  android:icon="@android:drawable/ic_menu_today"
+		  android:visible="false"/>
 
+    <!-- TODO: delete -->
     <item android:id="@+id/chooseBookButton" 
 		  android:title="@string/chooseBook"
-		  android:icon="@android:drawable/ic_menu_save"/>
+		  android:icon="@android:drawable/ic_menu_save"
+		  android:visible="false"/>
 
-	<item android:id="@+id/bookmarksButton"
+    <item android:id="@+id/bibleVerseButton" 
+		  android:title="@string/verse"
+		  android:icon="@android:drawable/ic_menu_day"/>
+   	
+    	<item android:id="@+id/bookmarksButton"
 		  android:title="@string/bookmarks" 
 		  android:icon="@drawable/ic_menu_bookmarks"/>
 
@@ -32,41 +40,44 @@
 		  android:title="@string/speak"
 		  android:icon="@drawable/ic_action_volume_on"/>
 
-    <item android:id="@+id/bibleVerseButton" 
-		  android:title="@string/verse"
-		  android:icon="@android:drawable/ic_menu_day"/>
-   	
-	<item android:id="@+id/dailyReadingPlanButton"
-		  android:title="@string/rdg_plan_title"
-		  android:icon="@android:drawable/ic_menu_month"/>
-
-	<item 	android:id="@+id/historyButton" 
-			android:title="@string/history"
-			android:icon="@android:drawable/ic_menu_recent_history"/>
-
-		<item android:id="@+id/downloadButton"
-		  android:title="@string/download"
-		  android:icon="@drawable/ic_menu_goto"/>
-
-	<item android:id="@+id/settingsButton"
-		  android:title="@string/settings"
-		  android:icon="@android:drawable/ic_menu_preferences"/>
-	
-	<item android:id="@+id/backupMainMenu"
-		  android:title="@string/backup"
-		  android:icon="@android:drawable/ic_menu_save">
-		<menu>
-			<item android:id="@+id/backup"
+	<item android:id="@+id/moreSubMenu"
+		  android:title="@string/more">
+		  
+	    <menu >
+		
+			<item android:id="@+id/dailyReadingPlanButton"
+				  android:title="@string/rdg_plan_title"
+				  android:icon="@android:drawable/ic_menu_month"/>
+		
+			<item 	android:id="@+id/historyButton" 
+					android:title="@string/history"
+					android:icon="@android:drawable/ic_menu_recent_history"/>
+		
+			<item android:id="@+id/downloadButton"
+				  android:title="@string/download"
+				  android:icon="@drawable/ic_menu_goto"/>
+		
+			<item android:id="@+id/settingsButton"
+				  android:title="@string/settings"
+				  android:icon="@android:drawable/ic_menu_preferences"/>
+			
+			<item android:id="@+id/backupMainMenu"
 				  android:title="@string/backup"
-				  android:icon="@android:drawable/ic_menu_save"/>
-			<item android:id="@+id/restore"
-				  android:title="@string/restore"
-				  android:icon="@android:drawable/ic_menu_set_as"/>
+				  android:icon="@android:drawable/ic_menu_save">
+				<menu>
+					<item android:id="@+id/backup"
+						  android:title="@string/backup"
+						  android:icon="@android:drawable/ic_menu_save"/>
+					<item android:id="@+id/restore"
+						  android:title="@string/restore"
+						  android:icon="@android:drawable/ic_menu_set_as"/>
+				</menu>
+			</item>
+			
+			<item android:id="@+id/helpButton"
+				  android:title="@string/help"
+				  android:icon="@android:drawable/ic_menu_help"/>
 		</menu>
 	</item>
-	
-	<item android:id="@+id/helpButton"
-		  android:title="@string/help"
-		  android:icon="@android:drawable/ic_menu_help"/>
     
 </menu>
