--- a/AndBible/res/layout/main_bible_view.xml
+++ b/AndBible/res/layout/main_bible_view.xml
@@ -6,25 +6,16 @@
       The copyright to this program is held by it's author.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/mainBibleViewContainer" 
+	android:id="@+id/mainBibleView" 
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:fadingEdgeLength="0sp"
     >
-    <include layout="@layout/title_bar"/>
-    <LinearLayout android:id="@+id/mainBibleView" 
-	    android:layout_width="fill_parent" 
-	    android:layout_height="fill_parent"
-	    android:orientation="vertical"
-	    android:fadingEdgeLength="0sp"
-	    >
-		
 		<!-- removed explicit view reference because this page could contain a MyNote view
 		 net.bible.android.view.activity.page.BibleView  
 			android:id="@+id/main_text" 
 		    android:layout_width="fill_parent" 
 		    android:layout_height="fill_parent"
 		/-->
-	</LinearLayout>
 </LinearLayout>
