--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -24,17 +24,19 @@
 		  android:title="@string/verse"
 		  android:icon="@android:drawable/ic_menu_day"/>
    	
-    	<item android:id="@+id/bookmarksButton"
+   	<item android:id="@+id/bookmarksButton"
 		  android:title="@string/bookmarks" 
-		  android:icon="@drawable/ic_menu_bookmarks"/>
-
+		  android:icon="@drawable/ic_menu_bookmarks"
+		  appcompat:showAsAction="ifRoom"/>
+   	
 	<item android:id="@+id/mynotesButton"
 		  android:title="@string/mynotes" 
 		  android:icon="@drawable/ic_menu_usernotes"/>
     
 	<item android:id="@+id/searchButton"
 		  android:title="@string/search"
-		  android:icon="@android:drawable/ic_menu_search"/>
+		  android:icon="@android:drawable/ic_menu_search"
+		  appcompat:showAsAction="ifRoom"/>
 
 	<item android:id="@+id/speakButton"
 		  android:title="@string/speak"
