--- a/AndBible/res/values-v14/barstyles.xml
+++ b/AndBible/res/values-v14/barstyles.xml
@@ -7,27 +7,39 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     
+    <!-- Theme -->
     <style name="AppThemeDay" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/ActionBar.Solid.Custom.Day</item>
+		<item name="android:actionMenuTextAppearance">@style/ActionBar.Custom.Button.Appearance</item>
     </style>
     
     <style name="AppThemeNight" parent="@style/Theme.AppCompat">
         <item name="android:actionBarStyle">@style/ActionBar.Solid.Custom.Night</item>
+		<item name="android:actionMenuTextAppearance">@style/ActionBar.Custom.Button.Appearance</item>
     </style>
     
     <!-- Bar -->
-	<style name="ActionBar.Solid.Custom" parent="@style/Widget.AppCompat.ActionBar.Solid">
-    	<item name="android:textColor">@color/actionbar_text</item>
-        <item name="android:titleTextStyle">@style/ActionBar.Solid.Custom.Title</item>
-	</style>
     <style name="ActionBar.Solid.Custom.Day" parent="@style/ActionBar.Solid.Custom">
         <item name="android:background">@color/actionbar_background_day</item>
 	</style>
     <style name="ActionBar.Solid.Custom.Night" parent="@style/ActionBar.Solid.Custom">
         <item name="android:background">@color/actionbar_background_night</item>
 	</style>
+	<!-- All bars -->
+	<style name="ActionBar.Solid.Custom" parent="@style/Widget.AppCompat.ActionBar.Solid">
+    	<item name="android:textColor">@color/actionbar_text</item>
+        <item name="android:titleTextStyle">@style/ActionBar.Solid.Custom.Title</item>
+	</style>
+    	
+    <!-- Text -->
+
 	<style name="ActionBar.Solid.Custom.Title">
         <item name="android:textColor">@color/actionbar_text</item>
+    </style>
+	<style name="ActionBar.Custom.Button.Appearance" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Menu">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">normal</item>
+		<item name="android:textSize">14sp</item>
     </style>
  
 </resources>
