--- a/AndBible/res/menu/choose_document_menu.xml
+++ b/AndBible/res/menu/choose_document_menu.xml
@@ -7,8 +7,10 @@
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:appcompat="http://schemas.android.com/apk/res-auto" >
-	<item android:id="@+id/refresh" 
-		  android:title="@string/download_refresh_book_list_menu_item"
-		  android:icon="@drawable/ic_action_refresh"
-		  appcompat:showAsAction="ifRoom"/>
+    
+    <item android:id="@+id/downloadButton"
+		  android:title="@string/download"
+		  android:icon="@drawable/ic_action_download"
+		  appcompat:showAsAction="always"/>
+    
 </menu>
