--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -57,7 +57,7 @@
 		
 			<item android:id="@+id/downloadButton"
 				  android:title="@string/download"
-				  android:icon="@drawable/ic_menu_goto"/>
+				  android:icon="@drawable/ic_action_download"/>
 		
 			<item android:id="@+id/settingsButton"
 				  android:title="@string/settings"
