Switch back to More...

--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -43,7 +43,7 @@
 		  android:icon="@drawable/ic_action_volume_on"/>
 
 	<item android:id="@+id/moreSubMenu"
-		  android:title="@string/more">
+		  android:title="@string/more_dotted">
 		  
 	    <menu >
 		
