Prepare for bookmark spans around a verse

--- a/AndBible/assets/web/style.css
+++ b/AndBible/assets/web/style.css
@@ -110,3 +110,7 @@ h1 a, .heading2, .heading3, .heading4 {
 /*	-webkit-rtl-ordering: logical; */
 }
 
+.bookmark {
+	/* yellow */
+	background-color: #C0C000;
+}
