--- a/AndBible/res/layout/title.xml
+++ b/AndBible/res/layout/title.xml
@@ -24,7 +24,8 @@
               android:layout_width="wrap_content"
               android:layout_height="fill_parent"
               android:layout_gravity="center"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:layout_marginLeft="5dip">
 	    <TextView android:id="@+id/pageTitle"
 	        	  style="@style/ActionBarTitle1"/>
 	    <TextView android:id="@+id/pageSubtitle"
