Localiations: New sk. Updated es, fr, hu, kk, ky

--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -75,6 +75,7 @@
 		<item>@string/lang_polish</item>
 		<item>@string/lang_portuguese</item>
 		<item>@string/lang_russian</item>
+		<item>@string/lang_slovak</item>
 		<item>@string/lang_slovenian</item>
 		<item>@string/lang_swedish</item>
 		<item>@string/lang_telugu</item>
@@ -120,6 +121,7 @@
 		<item>pl</item>
 		<item>pt</item>
 		<item>ru</item>
+		<item>sk</item>
 		<item>sl</item>
 		<item>sv</item>
 		<item>te</item>
