--- a/AndBible/res/values/untranslated_strings.xml
+++ b/AndBible/res/values/untranslated_strings.xml
@@ -41,6 +41,7 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
     <string name="lang_polish">pl: Polski</string>
 	<string name="lang_portuguese">pt: Português</string>
 	<string name="lang_russian">ru: Русский</string>
+	<string name="lang_slovak">sk: Slovenčina</string>
 	<string name="lang_slovenian">sl: Slovenščina</string>
 	<string name="lang_swedish">sv: Svenska</string>
 	<string name="lang_telugu">te: తెలుగు</string>
