--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -45,6 +45,7 @@
 		<item>@string/lang_default</item>
 		<item>@string/lang_afrikaans</item>
 		<item>@string/lang_arabic</item>
+		<item>@string/lang_azerbaijani</item>
 		<item>@string/lang_czech</item>
 		<item>@string/lang_welsh</item>
 		<item>@string/lang_german</item>
@@ -91,6 +92,7 @@
 		<item></item>
 		<item>af</item>
 		<item>ar</item>
+		<item>az</item>
 		<item>cs</item>
 		<item>cy</item>
 		<item>de</item>
