--- a/AndBible/res/values/untranslated_strings.xml
+++ b/AndBible/res/values/untranslated_strings.xml
@@ -11,6 +11,7 @@ Look here for language names and codes: http://en.fr.open-tran.eu/
     <!-- Languages -->
 	<string name="lang_afrikaans">af: Afrikaans</string>
 	<string name="lang_arabic">ar: العربية</string>
+	<string name="lang_azerbaijani">az: Azərbaycan</string>
 	<string name="lang_czech">cs: Čeština</string>
 	<string name="lang_welsh">cy: Cymraeg</string>
 	<string name="lang_german">de: Deutsch</string>
