--- a/AndBible/assets/web/style.css
+++ b/AndBible/assets/web/style.css
@@ -18,10 +18,11 @@ h1, .heading1 {
 span[id="0"].verse + h1 {
 	display:inline;
 }
-/* but ensure a heading in verse 0 is followed by a new line e.g. GerNeUe Ps 69 */
+/* but ensure a heading in verse 0 is followed by a new line e.g. GerNeUe Ps 69 
+   The "\A" escape sequence is a new line. */
 span[id="0"].verse + h1:after { 
 	content: "\A";
-	white-space:pre; 
+	white-space: pre; 
 }
 
 h1 a, .heading2, .heading3, .heading4 {
@@ -96,7 +97,7 @@ h1 a, .heading2, .heading3, .heading4 {
 .hi_sub {
 	vertical-align: sub;
 }
-.hi_sup {
+.hi_super {
 	vertical-align: super;
 }
 .hi_underline {
