--- a/AndBible/assets/web/style.css
+++ b/AndBible/assets/web/style.css
@@ -15,12 +15,12 @@ h1, .heading1 {
 }
 
 /* prevent gaps between titles which have a span adjacent to them see example in ESV Ps 69 where a title is immediately followed by another */  
-span[id="0"].verse + h1 {
+span[id="0"].verseNo + h1 {
 	display:inline;
 }
 /* but ensure a heading in verse 0 is followed by a new line e.g. GerNeUe Ps 69 
    The "\A" escape sequence is a new line. */
-span[id="0"].verse + h1:after { 
+span[id="0"].verseNo + h1:after { 
 	content: "\A";
 	white-space: pre; 
 }
@@ -38,7 +38,7 @@ h1 a, .heading2, .heading3, .heading4 {
 	font-variant: small-caps;
 }
 
-.verse {
+.verseNo {
 	color: Gray;
 	vertical-align: top;
 	font-size: 0.7em;
