--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -33,8 +33,8 @@
 			<item android:id="@+id/splitNew"
 				  android:title="@string/new_item"
 				  android:icon="@android:drawable/ic_menu_add"/>
-			<item android:id="@+id/splitClose"
-				  android:title="@string/close"
+			<item android:id="@+id/splitDelete"
+				  android:title="@string/delete"
 				  android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
 			<item android:id="@+id/splitSwap"
 				  android:title="@string/splitSwap"/>
