--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -36,12 +36,12 @@
 			<item android:id="@+id/splitDelete"
 				  android:title="@string/delete"
 				  android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
+			<item android:id="@+id/splitLink"
+				  android:title="@string/prefs_split_screen_linked"
+				  android:checkable="true"
+				  android:checked="true"/>
 			<item android:id="@+id/splitPromote"
 				  android:title="@string/splitPromote"/>
-			<item android:id="@+id/splitLink"
-				  android:title="@string/prefs_split_screen_linked"/>
-			<item android:id="@+id/splitUnlink"
-				  android:title="@string/prefs_split_screen_not_linked"/>
 		</menu>
 	</item>
 	
