--- a/AndBible/res/menu/window_popup_menu.xml
+++ b/AndBible/res/menu/window_popup_menu.xml
@@ -8,18 +8,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:appcompat="http://schemas.android.com/apk/res-auto" >
 
-	<item android:id="@+id/splitNew"
+	<item android:id="@+id/windowNew"
 		  android:title="@string/new_item"
 		  android:icon="@android:drawable/ic_menu_add"/>
-	<item android:id="@+id/splitMinimise"
-		  android:title="@string/splitMinimise"/>
-	<item android:id="@+id/splitDelete"
-		  android:title="@string/delete"
+	<item android:id="@+id/windowMinimise"
+		  android:title="@string/windowMinimise"/>
+	<item android:id="@+id/windowClose"
+		  android:title="@string/windowClose"
 		  android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
-	<item android:id="@+id/splitLink"
-		  android:title="@string/prefs_split_screen_linked"
+	<item android:id="@+id/windowSynchronised"
+		  android:title="@string/windowSynchronised"
 		  android:checkable="true"
 		  android:checked="true"/>
-	<item android:id="@+id/splitMoveFirst"
-		  android:title="@string/splitMoveFirst"/>
+	<item android:id="@+id/windowMoveFirst"
+		  android:title="@string/windowMoveFirst"/>
 </menu>
