--- a/AndBible/res/values/colors.xml
+++ b/AndBible/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="split_separator_colour">#FF6B6B6B</color>
-	<color name="split_separator_drag_colour">#FF00FF00</color>
+	<color name="window_separator_colour">#FF6B6B6B</color>
+	<color name="window_separator_drag_colour">#FF00FF00</color>
 
-	<color name="split_button_text_colour">#66FFFFFF</color>
-	<color name="split_button_background_colour">#666B6B6B</color>
+	<color name="window_button_text_colour">#66FFFFFF</color>
+	<color name="window_button_background_colour">#666B6B6B</color>
 				    
 	<!-- matches background_holo_dark -->
 	<color name="actionbar_background_night">#ff000000</color>
