--- a/AndBible/res/menu/window_popup_menu.xml
+++ b/AndBible/res/menu/window_popup_menu.xml
@@ -11,14 +11,18 @@
 	<item android:id="@+id/windowNew"
 		  android:title="@string/new_item"
 		  android:icon="@android:drawable/ic_menu_add"/>
+	<item android:id="@+id/windowMaximise"
+		  android:title="@string/windowMaximise"
+		  android:checkable="true"
+		  android:checked="false"/>
 	<item android:id="@+id/windowMinimise"
 		  android:title="@string/windowMinimise"
 		  android:icon="@drawable/ic_menu_minimise"/>
 	<item android:id="@+id/windowClose"
 		  android:title="@string/windowClose"
 		  android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
-	<item android:id="@+id/windowSynchronised"
-		  android:title="@string/windowSynchronised"
+	<item android:id="@+id/windowSynchronise"
+		  android:title="@string/windowSynchronise"
 		  android:icon="@android:drawable/ic_media_pause"
 		  android:checkable="true"
 		  android:checked="true"/>
