--- a/AndBible/res/drawable/ic_menu_minimise.xml
+++ b/AndBible/res/drawable/ic_menu_minimise.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <size android:width="5dp" android:height="5dp" />
-    <solid android:color="#000000" />
+    <solid android:color="@color/window_button_background_colour" />
 </shape>
