--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -54,8 +54,13 @@
 			<item android:id="@+id/downloadButton"
 				  android:title="@string/download"
 				  android:icon="@drawable/ic_action_download"/>
+			
 		
-			<item android:id="@+id/settingsButton"
+		    <item android:id="@+id/installZipButton"
+				  android:title="@string/install_zip"
+				  android:icon="@drawable/ic_menu_archive"/>
+		    
+		    <item android:id="@+id/settingsButton"
 				  android:title="@string/settings"
 				  android:icon="@android:drawable/ic_menu_preferences"/>
 			
