--- a/AndBible/res/menu/main.xml
+++ b/AndBible/res/menu/main.xml
@@ -34,28 +34,27 @@
 		</menu>
 	</item>
 	
+	<item android:id="@+id/dailyReadingPlanButton"
+		  android:title="@string/rdg_plan_title"
+		  android:icon="@android:drawable/ic_menu_month"/>
+
+	<item android:id="@+id/speakButton"
+		  android:title="@string/speak"
+		  android:icon="@drawable/ic_action_volume_on"/>
+
 	<item 	android:id="@+id/historyButton" 
 			android:title="@string/history"
 			android:icon="@android:drawable/ic_menu_recent_history"/>
 	
-	<item android:id="@+id/moreSubMenu"
-		  android:title="@string/more_dotted">
+	<item android:id="@+id/adminSubMenu"
+		  android:title="@string/administration">
 		  
 	    <menu >
 		
-			<item android:id="@+id/dailyReadingPlanButton"
-				  android:title="@string/rdg_plan_title"
-				  android:icon="@android:drawable/ic_menu_month"/>
-		
-			<item android:id="@+id/speakButton"
-				  android:title="@string/speak"
-				  android:icon="@drawable/ic_action_volume_on"/>
-
 			<item android:id="@+id/downloadButton"
 				  android:title="@string/download"
 				  android:icon="@drawable/ic_action_download"/>
 			
-		
 		    <item android:id="@+id/installZipButton"
 				  android:title="@string/install_zip"
 				  android:icon="@drawable/ic_menu_archive"/>
@@ -76,11 +75,11 @@
 						  android:icon="@android:drawable/ic_menu_set_as"/>
 				</menu>
 			</item>
-			
-			<item android:id="@+id/helpButton"
-				  android:title="@string/help"
-				  android:icon="@android:drawable/ic_menu_help"/>
 		</menu>
 	</item>
+
+	<item android:id="@+id/helpButton"
+		  android:title="@string/help"
+		  android:icon="@android:drawable/ic_menu_help"/>
     
 </menu>
