--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -34,6 +34,7 @@
 		<item>@string/lang_afrikaans</item>
 		<item>@string/lang_arabic</item>
 		<item>@string/lang_azerbaijani</item>
+		<item>@string/lang_bulgarian</item>
 		<item>@string/lang_czech</item>
 		<item>@string/lang_welsh</item>
 		<item>@string/lang_german</item>
@@ -81,6 +82,7 @@
 		<item>af</item>
 		<item>ar</item>
 		<item>az</item>
+		<item>bg</item>
 		<item>cs</item>
 		<item>cy</item>
 		<item>de</item>
