Make Uzbek language available

--- a/AndBible/res/values/arrays.xml
+++ b/AndBible/res/values/arrays.xml
@@ -72,6 +72,7 @@
 		<item>@string/lang_thai</item>
 		<item>@string/lang_turkish</item>
 		<item>@string/lang_ukrainian</item>
+		<item>@string/lang_uzbek</item>
 		<item>@string/lang_vietnamese</item>
 		<item>@string/lang_chinese</item>
 	</string-array>
@@ -120,6 +121,7 @@
 		<item>th</item>
 		<item>tr</item>
 		<item>uk</item>
+		<item>uz</item>
 		<item>vi</item>
 		<item>zh</item>
 	</string-array>
