--- a/and-bible/app/src/main/res/menu/document_viewer_context_menu.xml
+++ b/and-bible/app/src/main/res/menu/document_viewer_context_menu.xml
@@ -5,20 +5,36 @@
  @see gnu.lgpl.License for license details.<br>
       The copyright to this program is held by it's author.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+	  xmlns:appcompat="http://schemas.android.com/apk/res-auto">
 
-   	<item android:id="@+id/myNoteAddEdit" 
-		  android:title="@string/mynote_add"/>
+   	<item android:id="@+id/myNoteAddEdit"
+		  android:title="@string/mynote_add"
+		  android:icon="@drawable/ic_menu_usernotes"
+		  appcompat:showAsAction="always"/>
+
 	<item android:id="@+id/add_bookmark"
-		  android:title="@string/add_bookmark"/>
+		  android:title="@string/add_bookmark"
+		  android:icon="@drawable/ic_menu_bookmarks"
+		  appcompat:showAsAction="always"/>
+
+	<item android:id="@+id/compareTranslations"
+		  android:title="@string/compare_translations"
+		  android:icon="@android:drawable/ic_dialog_map"
+		  appcompat:showAsAction="always"/>
+
+	<item android:id="@+id/shareVerse"
+		  android:title="@string/share_verse"
+		  android:icon="@android:drawable/ic_menu_share"
+		  appcompat:showAsAction="ifRoom"/>
+
+	<!-- Footnotes and references -->
 	<item android:id="@+id/notes"
 		  android:title="@string/notes"/>
-	<item android:id="@+id/compareTranslations" 
-		  android:title="@string/compare_translations"/>
-	<item android:id="@+id/shareVerse" 
-		  android:title="@string/share_verse"/>
-	<item android:id="@+id/copy" 
+
+	<item android:id="@+id/copy"
 		  android:title="@string/copy"/>
+
 	<item android:id="@+id/selectText"
 		  android:title="@string/select_text"/>
 
